--- a/resources.html
+++ b/resources.html
@@ -20,7 +20,7 @@
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
         <a href="/resources.html" class="nav-link active" aria-current="page">Resources</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSckXPkwbUa7ctk_u0Bo71YExCaENONEoa8arj1YTFPSH7VDQg/viewform?usp=sf_link" class="nav-link" target="_blank" rel="noopener">Submit</a>
+        <a href="https://forms.gle/4XtfZj8XbCUTvRzv8" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
       </nav>
     </div>
