--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="/" class="nav-link active" aria-current="page">Games</a>
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
         <a href="/resources.html" class="nav-link">Resources</a>
-        <a href="/spotlight.html">Spotlight</a>
+        <a href="/spotlight.html" class="nav-link">Spotlight</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSckXPkwbUa7ctk_u0Bo71YExCaENONEoa8arj1YTFPSH7VDQg/viewform?usp=sf_link" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
 
