--- a/spotlight.html
+++ b/spotlight.html
@@ -10,10 +10,10 @@
 <body>
   <header class="wrap">
     <nav class="topnav">
-      <a href="/index.html">Games</a>
-      <a href="/resources.html">Resources</a>
-      <a href="/tutorials.html">Tutorials</a>
-      <a class="active" href="/spotlight.html">Spotlight</a>
+      <a href="/" class="nav-link active" aria-current="page">Games</a>
+        <a href="/tutorials.html" class="nav-link">Tutorials</a>
+        <a href="/resources.html" class="nav-link">Resources</a>
+        <a class="active" href="/spotlight.html" class="nav-link">Spotlight</a>
     </nav>
     <h1>Spotlight</h1>
     <p class="tagline">A rotating feature that highlights a PnP category with standout picks.</p>
