--- a/spotlight.html
+++ b/spotlight.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>PnP Finder – Spotlight</title>
-  <link rel="stylesheet" href="/styles.css?v=v2025-09-27" />
+  <link rel="stylesheet" href="/css/style.css?v=v2025-09-27" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
