--- a/spotlight.html
+++ b/spotlight.html
@@ -33,6 +33,7 @@
     </div>
   </header>
   <main id="main" class="wrap" role="main">
+    <nav id="pagerTop" class="pager" aria-label="Category switch (top)"></nav>
     <div id="errorBanner" class="notice" role="alert" hidden></div>
     <section id="hero" class="spot-hero" aria-live="polite"></section>
     <div id="resultsMeta" class="results-meta" aria-live="polite"></div>
