--- a/resources.html
+++ b/resources.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PnPFinder — Resources</title>
+  <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon.png" />
+<link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
   <meta name="color-scheme" content="dark light" />
   <link rel="stylesheet" href="/css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js" defer></script>
@@ -20,7 +23,7 @@
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
         <a href="/resources.html" class="nav-link active" aria-current="page">Resources</a>
-        <a href="/spotlight.html" class="nav-link">Spotlight</a>
+        <a href="/spotlight.html">Spotlight</a>
         <a href="https://forms.gle/4XtfZj8XbCUTvRzv8" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
       </nav>
