--- a/tutorials.html
+++ b/tutorials.html
@@ -20,7 +20,7 @@
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link active" aria-current="page">Tutorials</a>
         <a href="/resources.html" class="nav-link">Resources</a>
-        <a href="/spotlight.html" class="nav-link">Spotlight</a>
+        <a href="/spotlight.html">Spotlight</a>
         <a href="https://forms.gle/dUomLPzqoDsLvZMU7" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
       </nav>
