--- a/tutorials.html
+++ b/tutorials.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PnPFinder — Tutorials</title>
+  <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon.png" />
+<link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
   <meta name="color-scheme" content="dark light" />
   <link rel="stylesheet" href="/css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js" defer></script>
