--- a/tutorials.html
+++ b/tutorials.html
@@ -24,6 +24,7 @@
         <a href="/tutorials.html" class="nav-link active" aria-current="page">Tutorials</a>
         <a href="/resources.html" class="nav-link">Resources</a>
         <a href="/spotlight.html" class="nav-link">Spotlight</a>
+        <a href="/crowdfunding.html" class="nav-link">Crowdfunding</a>
         <a href="https://forms.gle/dUomLPzqoDsLvZMU7" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
       </nav>
