--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="/resources.html" class="nav-link">Resources</a>
         <a href="/spotlight.html" class="nav-link">Spotlight</a>
         <a href="/crowdfunding.html" class="nav-link">Crowdfunding</a>
+        <a href="https://formatter.gonzhome.us/" class="nav-link">Card Formatter</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSckXPkwbUa7ctk_u0Bo71YExCaENONEoa8arj1YTFPSH7VDQg/viewform?usp=sf_link" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
 
