--- a/resources.html
+++ b/resources.html
@@ -25,6 +25,7 @@
         <a href="/resources.html" class="nav-link active" aria-current="page">Resources</a>
         <a href="/spotlight.html" class="nav-link">Spotlight</a>
         <a href="/crowdfunding.html" class="nav-link">Crowdfunding</a>
+        <a href="https://formatter.gonzhome.us/" class="nav-link">Card Formatter</a>
         <a href="https://forms.gle/4XtfZj8XbCUTvRzv8" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
       </nav>
