--- a/submit.html
+++ b/submit.html
@@ -259,7 +259,7 @@
   </main>
 
   <footer class="site-footer wrap">
-    <small>© <span id="year"></span> PnPFinder</small>
+    <small>© <span id="year">2026</span> PnPFinder. Site owned by <a href="mailto:help@pnpfinder.com">Martin Gonzalvez</a></small>
   </footer>
 </body>
 </html>
