--- a/tutorials.html
+++ b/tutorials.html
@@ -85,6 +85,7 @@
 
   <footer class="site-footer wrap">
     <small>© <span id="year">2026</span> PnPFinder. Site owned by <a href="mailto:help@pnpfinder.com">Martin Gonzalvez</a></small>
+    <p class="kofi-note"><a href="https://ko-fi.com/marting" target="_blank" rel="noopener">&#9749; Like this tool? Why not buy me a coffee?</a></p>
   </footer>
 </body>
 </html>
