--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -24,7 +24,7 @@
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
         <a href="/resources.html" class="nav-link">Resources</a>
         <a href="/spotlight.html" class="nav-link">Spotlight</a>
-        <a href="/crowdfunding.html" class="nav-link active">Crowdfunding</a>
+        <a href="https://launchpad.gonzhome.us" class="nav-link active" target="_blank" rel="noopener">Crowdfunding</a>
         <a href="https://formatter.gonzhome.us/" class="nav-link">Card Formatter</a>
         <a href="https://forms.gle/HiKfhBuNMtZQhFKj7" class="nav-link" target="_blank" rel="noopener">Submit</a>
       </nav>
