--- a/spotlight.html
+++ b/spotlight.html
@@ -23,7 +23,8 @@
         <a href="/resources.html" class="nav-link">Resources</a>
         <a href="/spotlight.html" class="nav-link active" aria-current="page">Spotlight</a>
         <a href="https://launchpad.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Crowdfunding</a>
-        <a href="https://formatter.gonzhome.us/" class="nav-link">Card Formatter</a>
+        <a href="https://formatter.gonzhome.us/" class="nav-link" target="_blank" rel="noopener">Formatter</a>
+        <a href="https://extractor.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Extractor</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSckXPkwbUa7ctk_u0Bo71YExCaENONEoa8arj1YTFPSH7VDQg/viewform?usp=sf_link" class="nav-link" target="_blank" rel="noopener">Submit</a>
       </nav>
     </div>
