--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -25,7 +25,8 @@
         <a href="/resources.html" class="nav-link">Resources</a>
         <a href="/spotlight.html" class="nav-link">Spotlight</a>
         <a href="https://launchpad.gonzhome.us" class="nav-link active" target="_blank" rel="noopener">Crowdfunding</a>
-        <a href="https://formatter.gonzhome.us/" class="nav-link">Card Formatter</a>
+        <a href="https://formatter.gonzhome.us/" class="nav-link" target="_blank" rel="noopener">Formatter</a>
+        <a href="https://extractor.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Extractor</a>
         <a href="https://forms.gle/HiKfhBuNMtZQhFKj7" class="nav-link" target="_blank" rel="noopener">Submit</a>
       </nav>
     </div>
