--- a/submit.html
+++ b/submit.html
@@ -32,6 +32,8 @@
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
         <a href="/resources.html" class="nav-link">Resources</a>
+        <a href="https://formatter.gonzhome.us/" class="nav-link" target="_blank" rel="noopener">Formatter</a>
+        <a href="https://extractor.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Extractor</a>
         <a href="/submit.html" class="nav-link active" aria-current="page">Submit</a>
       </nav>
     </div>
