--- a/resources.html
+++ b/resources.html
@@ -1,93 +1,19 @@
 <!doctype html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PnPFinder — Resources</title>
-  <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon.png" />
-<link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
-  <meta name="color-scheme" content="dark light" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js" defer></script>
-  <script type="module" src="/js/resources.js" defer></script>
+  <title>PnPFinder — Resources Moved</title>
+  <meta http-equiv="refresh" content="0; url=https://pnptools.gonzhome.us" />
+  <link rel="canonical" href="https://pnptools.gonzhome.us" />
+  <script>
+    window.location.replace("https://pnptools.gonzhome.us");
+  </script>
 </head>
 <body>
-  <header class="site-header wrap" role="banner">
-    <div class="brand">
-      <h1><a class="brand-link" href="/">PnPFinder</a></h1>
-      <p class="tagline">Helpful communities, tools, websites, geeklists, and more.</p>
-
-      <!-- Top-level navigation -->
-      <nav class="top-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Games</a>
-        <a href="/tutorials.html" class="nav-link">Tutorials</a>
-        <a href="/resources.html" class="nav-link active" aria-current="page">Resources</a>
-        <a href="/spotlight.html" class="nav-link">Spotlight</a>
-        <a href="https://launchpad.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Crowdfunding</a>
-        <a href="https://formatter.gonzhome.us/" class="nav-link" target="_blank" rel="noopener">Formatter</a>
-        <a href="https://extractor.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Extractor</a>
-        <a href="https://forms.gle/4XtfZj8XbCUTvRzv8" class="nav-link" target="_blank" rel="noopener">Submit</a>
-
-      </nav>
-    </div>
-
-    <div class="controls">
-      <div class="search">
-        <label for="q" class="sr-only">Search resources</label>
-        <input id="q" type="search" placeholder="Search category, title, creator, description…" autocomplete="off" />
-      </div>
-
-      <div class="view-toggle" role="group" aria-label="View mode">
-        <button id="viewCards" class="toggle" aria-pressed="true">Cards</button>
-        <button id="viewList" class="toggle" aria-pressed="false">List</button>
-      </div>
-
-      <div class="sort">
-        <label for="sortBy" class="sr-only">Sort by</label>
-        <select id="sortBy" aria-label="Sort by">
-          <option value="relevance">Relevance</option>
-          <option value="az">A–Z</option>
-          <option value="creator">Creator</option>
-        </select>
-      </div>
-
-      <div class="theme">
-        <button id="themeToggle" class="toggle" aria-pressed="false" title="Switch to light mode">Dark</button>
-      </div>
-    </div>
-  </header>
-
-  <main id="main" class="wrap" role="main" aria-busy="true">
-    <!-- Filters: Resource Category -->
-    <details class="filters" open>
-      <summary>Filters</summary>
-      <form id="filtersForm">
-        <div id="filtersGrid" class="filters-grid" aria-live="polite">
-          <!-- Category dropdown is injected by resources.js -->
-        </div>
-
-        <div class="filter-actions">
-          <button type="button" id="clearFilters" class="secondary">Clear</button>
-          <button type="submit" id="applyFilters" class="primary">Apply</button>
-        </div>
-      </form>
-    </details>
-
-    <div id="resultsMeta" class="results-meta" aria-live="polite"></div>
-
-    <section id="cards" class="cards" role="list"></section>
-
-    <nav id="pager" class="pager" aria-label="Pagination" hidden>
-      <button class="page-btn" data-page="prev" aria-label="Previous page">Prev</button>
-      <div id="pageNumbers" class="page-numbers" role="group" aria-label="Pages"></div>
-      <button class="page-btn" data-page="next" aria-label="Next page">Next</button>
-    </nav>
-  </main>
-
-  <footer class="site-footer wrap">
-    <small>© <span id="year">2026</span> PnPFinder. Site owned by <a href="mailto:help@pnpfinder.com">Martin Gonzalvez</a></small>
-    <p class="kofi-note"><a href="https://ko-fi.com/marting" target="_blank" rel="noopener">&#9749; Like this tool? Why not buy me a coffee?</a></p>
-  </footer>
+  <p>
+    Resources moved to
+    <a href="https://pnptools.gonzhome.us" target="_blank" rel="noopener">pnptools.gonzhome.us</a>.
+  </p>
 </body>
 </html>
