--- a/spotlight.html
+++ b/spotlight.html
@@ -20,7 +20,7 @@
       <nav class="top-nav" aria-label="Primary">
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
-        <a href="/resources.html" class="nav-link">Resources</a>
+        <a href="https://pnptools.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Resources</a>
         <a href="/spotlight.html" class="nav-link active" aria-current="page">Spotlight</a>
         <a href="https://launchpad.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Crowdfunding</a>
         <a href="https://formatter.gonzhome.us/" class="nav-link" target="_blank" rel="noopener">Formatter</a>
