--- a/tutorials.html
+++ b/tutorials.html
@@ -22,11 +22,16 @@
       <nav class="top-nav" aria-label="Primary">
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link active" aria-current="page">Tutorials</a>
-        <a href="https://pnptools.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Resources</a>
         <a href="/spotlight.html" class="nav-link">Spotlight</a>
-        <a href="https://launchpad.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Crowdfunding</a>
-        <a href="https://formatter.gonzhome.us/" class="nav-link" target="_blank" rel="noopener">Formatter</a>
-        <a href="https://extractor.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Extractor</a>
+        <details class="nav-dropdown">
+          <summary class="nav-link">Tools</summary>
+          <div class="nav-dropdown-menu">
+            <a href="https://launchpad.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Launchpad</a>
+            <a href="https://pnptools.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">PnPTools</a>
+            <a href="https://formatter.gonzhome.us/" class="nav-dropdown-item" target="_blank" rel="noopener">Formatter</a>
+            <a href="https://extractor.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Extractor</a>
+          </div>
+        </details>
         <a href="https://forms.gle/dUomLPzqoDsLvZMU7" class="nav-link" target="_blank" rel="noopener">Submit</a>
 
       </nav>
