--- a/submit.html
+++ b/submit.html
@@ -31,9 +31,15 @@
       <nav class="top-nav" aria-label="Primary">
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
-        <a href="https://pnptools.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Resources</a>
-        <a href="https://formatter.gonzhome.us/" class="nav-link" target="_blank" rel="noopener">Formatter</a>
-        <a href="https://extractor.gonzhome.us" class="nav-link" target="_blank" rel="noopener">Extractor</a>
+        <details class="nav-dropdown">
+          <summary class="nav-link">Tools</summary>
+          <div class="nav-dropdown-menu">
+            <a href="https://launchpad.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Launchpad</a>
+            <a href="https://pnptools.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">PnPTools</a>
+            <a href="https://formatter.gonzhome.us/" class="nav-dropdown-item" target="_blank" rel="noopener">Formatter</a>
+            <a href="https://extractor.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Extractor</a>
+          </div>
+        </details>
         <a href="/submit.html" class="nav-link active" aria-current="page">Submit</a>
       </nav>
     </div>
