--- a/tutorials.html
+++ b/tutorials.html
@@ -30,6 +30,7 @@
             <a href="https://pnptools.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">PnPTools</a>
             <a href="https://formatter.gonzhome.us/" class="nav-dropdown-item" target="_blank" rel="noopener">Formatter</a>
             <a href="https://extractor.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Extractor</a>
+            <a href="https://prototyper.gonnzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Prototyper</a>
           </div>
         </details>
         <a href="https://forms.gle/dUomLPzqoDsLvZMU7" class="nav-link" target="_blank" rel="noopener">Submit</a>
