--- a/submit.html
+++ b/submit.html
@@ -38,7 +38,7 @@
             <a href="https://pnptools.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">PnPTools</a>
             <a href="https://formatter.gonzhome.us/" class="nav-dropdown-item" target="_blank" rel="noopener">Formatter</a>
             <a href="https://extractor.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Extractor</a>
-            <a href="https://prototyper.gonnzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Prototyper</a>
+            <a href="https://prototyper.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Prototyper</a>
           </div>
         </details>
         <a href="/submit.html" class="nav-link active" aria-current="page">Submit</a>
