--- a/spotlight.html
+++ b/spotlight.html
@@ -28,7 +28,7 @@
             <a href="https://pnptools.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">PnPTools</a>
             <a href="https://formatter.gonzhome.us/" class="nav-dropdown-item" target="_blank" rel="noopener">Formatter</a>
             <a href="https://extractor.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Extractor</a>
-            <a href="https://prototyper.gonnzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Prototyper</a>
+            <a href="https://prototyper.gonzhome.us" class="nav-dropdown-item" target="_blank" rel="noopener">Prototyper</a>
           </div>
         </details>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSckXPkwbUa7ctk_u0Bo71YExCaENONEoa8arj1YTFPSH7VDQg/viewform?usp=sf_link" class="nav-link" target="_blank" rel="noopener">Submit</a>
